Updated school logo and descriptions

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             <div class="row">
                 <div class="col-md-3 col-6">
                     <div class="stat-item fade-in">
-                        <a class="stat-number" href="#education">3.91</a>
+                        <a class="stat-number" href="#education">3.943</a>
                         <div class="stat-label">GPA</div>
                     </div>
                 </div>
@@ -639,8 +639,12 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            <h5 class="text-primary">University of Notre Dame</h5>
+                            <h5 class="text-primary d-flex justify-content-between align-items-center">
+                                University of Notre Dame
+                                <img src="ND_Monogram_117_RGB.png" alt="" width="40px" class="me-4">
+                            </h5>
                             <p class="text-muted mb-2">Notre Dame, Indiana</p>
+                            <p class="mb-1"><strong>Minor:</strong> Engineering Corporate Practice</p>
                             <p class="mb-1"><strong>Expected Graduation:</strong> May 2026</p>
                             <p class="mb-0"><strong>GPA:</strong> 3.943</p>
                         </div>
@@ -655,8 +659,10 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            <h5 class="text-primary">Cardinal Gibbons High School</h5>
-                            <p class="text-muted mb-2">Raleigh, North Carolina</p>
+                            <h5 class="text-primary d-flex justify-content-between align-items-center">
+                                Cardinal Gibbons High School
+                                <img src="CGHS.png" alt="" width="40px" class="me-4">
+                            </h5>                            <p class="text-muted mb-2">Raleigh, North Carolina</p>
                             <p class="mb-1"><strong>Graduated:</strong> May 2023</p>
                             <p class="mb-0"><strong>Weighted GPA:</strong> 4.896</p>
                             <p class="mb-0"><strong>Unweighted GPA:</strong> 4.0</p>
@@ -675,14 +681,50 @@
                 <div class="col-lg-4 mb-4">
                     <div class="card h-100 experience-card fade-in">
                         <div class="card-header">
-                            <h5 class="mb-0">Research Assistant</h5>
+                            <h5 class="mb-0">Research Assistant Intern</h5>
                             <small>May 2025 - Present</small>
                         </div>
                         <div class="card-body">
                             <h6 class="text-primary">Mendoza College of Business at University of Notre Dame</h6>
                             <ul class="list-unstyled">
+                                <li class="mb-2">• Building a predictive ML model to predict conference paper status given current metadata</li>
                                 <li class="mb-2">• Developed scalable web scrapers and leveraged APIs to collect metadata from conference papers, automating data extraction and analysis from both static and dynamic content</li>
-                                <li class="mb-2">• Created and cleaned author and AI-related conference paper databases</li>
+                                <li class="mb-2">• Created scripts for collecting, cleaning, and analyzing conference author/paper metadata using Python and the OpenReview API</li>
+                                <li>• Published software documentation on all written code, research procedures, and data results</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 experience-card fade-in">
+                        <div class="card-header">
+                            <h5 class="mb-0">Undergraduate Research Assistant</h5>
+                            <small>Jan 2025 - Present</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-primary">Cooperative Computing Lab at University of Notre Dame</h6>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Improving TaskVine (a distributed computing framework) reliability and workflows according to coding standards</li>
+                                <li class="mb-2">• Resolved 411,000 memory errors and improved computation efficiency by redesigning hashing algorithms</li>
+                                <li class="mb-2">• Designed Python scripts for task scheduling, resource allocation, and data distribution across distributed systems</li>
+                                <li>• Researched the integration of LLMs in memory-based error debugging prior to deployment</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 experience-card fade-in">
+                        <div class="card-header">
+                            <h5 class="mb-0">Lead Programmer</h5>
+                            <small>Aug 2019 - Aug 2023</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-primary">FIRST Tech Challenge</h6>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Led a cross-functional team of 8 students as Lead Software Engineer and headed the Autonomous software development</li>
+                                <li class="mb-2">• Onboarded new team members with an introduction to Java, Git, and the FIRST control framework</li>
+                                <li class="mb-2">• Implemented an auto-alignment system with Vuforia image recognition and TensorFlow object detection</li>
+                                <li>• Filed 2 patents for a “Foot-Operated Robot Interface” and a “Swerve-Drive Robot”</li>
                             </ul>
                         </div>
                     </div>
@@ -696,24 +738,8 @@
                         <div class="card-body">
                             <h6 class="text-primary">University of Notre Dame</h6>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• Served as a Teaching Assistant during the day and Resident Assistant during the evenings</li>
-                                <li class="mb-2">• Led campers in education and recreational activities</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="card h-100 experience-card fade-in">
-                        <div class="card-header">
-                            <h5 class="mb-0">Undergraduate Research Assistant</h5>
-                            <small>Jan 2025 - May 2025</small>
-                        </div>
-                        <div class="card-body">
-                            <h6 class="text-primary">Cooperative Computing Lab at University of Notre Dame</h6>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">• Assisting in the development and optimization of distributed computing workflows using TaskVine, a scalable system for managing large-scale computional tasks, especially high-energy physics</li>
-                                <li class="mb-2">• Learning to design Python scripts for task scheduling, resource allocation, and data distribution across distributed systems</li>
-                                <li>• Analyzing performance, debugging, and improving system reliability in distributed computing environments</li>
+                                <li class="mb-2">• Collaborated with a team of 12 counselors to coordinate and lead engaging activities for campers</li>
+                                <li class="mb-2">• Mentored 131 high school campers on software design and implementation throughout the robot project</li>
                             </ul>
                         </div>
                     </div>
@@ -728,10 +754,10 @@
                         <div class="card-body">
                             <h6 class="text-primary">University of Notre Dame</h6>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• Tutor student-athletes in Calculus, Linear Algebra, and Electro Magnetism</li>
-                                <li class="mb-2">• Develop personalized study strategies and time management skills</li>
-                                <li class="mb-2">• Collaborate with academic advisors and coaching staff</li>
-                                <li>• Foster positive learning environments for academic growth</li>
+                                <li class="mb-2">• Tutored student-athletes in Calculus, Linear Algebra, and Electro Magnetism</li>
+                                <li class="mb-2">• Developed personalized study strategies and time management skills</li>
+                                <li class="mb-2">• Collaborated with academic advisors and coaching staff</li>
+                                <li>• Fostered positive learning environments for academic growth</li>
                             </ul>
                         </div>
                     </div>
@@ -741,14 +767,13 @@
                         <div class="card-header">
                             <h5 class="mb-0">Green Team Member</h5>
                             <small>Aug 2024 - Dec 2024 | </small>
-                            <small>Aug 2025 - Dec 2025</small>
+                            <small>Aug 2025 - Present</small>
                         </div>
                         <div class="card-body">
                             <h6 class="text-primary">Notre Dame Sustainability</h6>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• Welcome guests and distribute recycling materials at game day events</li>
-                                <li class="mb-2">• Communicate sustainability policies to tailgaters</li>
-                                <li>• Support campus-wide recycling initiatives and engagement activities</li>
+                                <li class="mb-2">• Led sustainability initiatives at football tailgates to educate guests on recycling policies, boosting recycling rates from 9% to 15%</li>
+                                <li>• Supported university recycling programs, doubling diverted materials from the landfill from 25.97 to 50.16 tons in a year</li>
                             </ul>
                         </div>
                     </div>
