--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Font Awesome for icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Google Fonts -->
     <link
@@ -563,6 +564,16 @@
                         <a href="https://maps.google.com/?q=41.699190,-86.238714" class="contact-item" target="_blank">
                             <i class="fas fa-map-marker-alt"></i>
                             <span>Notre Dame, IN</span>
+                        </a>
+                    </div>
+                    <div class="contact-info fade-in">
+                        <a href="https://github.com/Ian2327" class="contact-item" target="_blank">
+                            <i class="bi bi-github"></i>
+                            <span>GitHub</span>
+                        </a>
+                        <a href="https://www.linkedin.com/in/ian-setia" class="contact-item" target="_blank">
+                            <i class="bi bi-linkedin"></i>
+                            <span>LinkedIn</span>
                         </a>
                     </div>
                 </div>
